Adding back auth & auth.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@azure/msal-angular": "3.0.2",
+    "@azure/msal-browser": "3.0.2",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-pro": "^6.4.0",
     "angular-datatables": "^15.0.0",
@@ -31,6 +33,7 @@
     "jquery": "^3.6.4",
     "ng2-charts": "^4.1.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-build-plus": "^15.0.0",
     "rxjs": "~7.5.0",
     "schematics": "^0.2.0",
     "tslib": "^2.3.0",
@@ -43,6 +46,7 @@
     "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.9",
+    "@types/yargs": "^17.0.24",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
