--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,19 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Build
         uses: docker/build-push-action@v4
         with:
           context: .
+          push: true
+          tags: notary-portal:1.0.${{ github.run_number }}
+          secrets: |
+            "AZ_CLIENT_ID=${{ secrets.AZ_CLIENT_ID }}"
+            "AZ_CLIENT_SECRET=${{ secrets.AZ_CLIENT_SECRET }}"
+            "AZ_TENANT_ID=${{ secrets.AZ_TENANT_ID }}"
+            "AZ_DOMAIN=${{ vars.AZ_DOMAIN }}"
